# skills-assessment-data-engineer

./: README.md
dbt/: .gitignore  .sqlfluffignore  README.md  dbt_project.yml  packages.yml  pyproject.toml
dbt/dev/: docker-compose.yml  init-db.sh  profiles.yml
dbt/macros/: format_date_to_month.sql  macros.yml  rename_seed_columns.sql
dbt/models/analytics/: analytics.yml  monthly_armed_jacket_no_hat_probs.sql  monthly_top_agency_regions.sql  monthly_top_behavior_probs.sql  top_behaviors.sql
dbt/models/mart/: dim_city.sql  fct_sighting.sql  mart.yml
dbt/models/staging/: staging.yml  stg_carmen_sightings_africa.sql  stg_carmen_sightings_all.sql  stg_carmen_sightings_america.sql  stg_carmen_sightings_asia.sql  stg_carmen_sightings_atlantic.sql  stg_carmen_sightings_australia.sql  stg_carmen_sightings_europe.sql  stg_carmen_sightings_indian.sql  stg_carmen_sightings_pacific.sql
dbt/seeds/: seed_carmen_sightings_europe.csv
